--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div id="dictionarySectionDetailInfo">
 				<div id="dictionarySectionDetailNavigation">
-					<button class="navButton" onclick="navLeft()"><i class="fas fa-chevron-circle-left"></i></button>Result #<label id="indexText"></label><button class="navButton" onclick="navRight()"><i class="fas fa-chevron-circle-right"></i></button>
+					<button class="navButton" onclick="navLeft()">🢀</button>Result #<label id="indexText"></label><button class="navButton" onclick="navRight()">🢂</button>
 				</div>
 				<canvas id="accuracyChart"></canvas>
 				<br>
